--- a/HospitalManager.Client/Components/Layout/DoctorNavbar.razor
+++ b/HospitalManager.Client/Components/Layout/DoctorNavbar.razor
@@ -1,35 +1,24 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">HospitalManager.Client</a>
+        <a class="navbar-brand" href="#">Hospital Manager</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/">Domov</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/patients">Pacienti</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/medicine">Lieky</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/profile">Profil</NavLink>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi" aria-hidden="true"></span> Domov
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="patients">
-                <span class="bi" aria-hidden="true"></span>
-                <span>Pacienti</span>
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="medicine">
-                <span class="bi" aria-hidden="true"></span>
-                <span>Lieky</span>
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link d-flex align-items-center" href="profile">
-                <span class="bi" aria-hidden="true"></span>
-                <span>Profil</span>
-            </NavLink>
-        </div>
-    </nav>
-</div>
+</nav>
