--- a/HospitalManager.Client/Components/Layout/MainLayout.razor
+++ b/HospitalManager.Client/Components/Layout/MainLayout.razor
@@ -1,12 +1,13 @@
 ﻿@inherits LayoutComponentBase
 <div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
+    @* <div class="sidebar"> *@
+    @*     <NavMenu/> *@
+    @* </div> *@
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div class="top-row align-content-center justify-content-between">
+            <NavMenu/>
+            @* <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a> *@
         </div>
 
         <article class="content px-4">
@@ -15,14 +16,14 @@
     </main>
 </div>
 
-<footer class="fixed-footer bg-dark text-white py-3 mt-auto">
-    <div class="container text-center">
-        <p>&copy; 2024 Hospital Manager. All rights reserved.</p>
-    </div>
-</footer>
+@* <footer class="fixed-footer bg-dark text-white py-3 mt-auto"> *@
+@*     <div class="container text-center"> *@
+@*         <p>&copy; 2024 Hospital Manager. All rights reserved.</p> *@
+@*     </div> *@
+@* </footer> *@
 
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div>
+@* <div id="blazor-error-ui"> *@
+@*     An unhandled error has occurred. *@
+@*     <a href="" class="reload">Reload</a> *@
+@*     <a class="dismiss">🗙</a> *@
+@* </div> *@
