--- a/HospitalManager.Client/Components/Layout/PatientNavbar.razor
+++ b/HospitalManager.Client/Components/Layout/PatientNavbar.razor
@@ -34,3 +34,28 @@
         </div>
     </nav>
 </div>
+
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Hospital Manager</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/">Domov</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/doctors">Doktori</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/recipes">Recepty</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/profil">Profil</NavLink>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
