--- a/HospitalManager.Client/Components/Pages/Doctor/PatientDetails.razor
+++ b/HospitalManager.Client/Components/Pages/Doctor/PatientDetails.razor
@@ -5,6 +5,7 @@
 @using HospitalManager.Shared.Models
 @using Microsoft.AspNetCore.Authorization
 @attribute [Authorize(Roles = "Doktor")]
+@rendermode InteractiveServer
 
 <PageTitle>Patient Details</PageTitle>
 
@@ -102,61 +103,37 @@
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-            <EditForm Model="patient" OnValidSubmit="HandleValidSubmit">
-                <div class="mb-3">
-                    <label for="FirstName" class="form-label">Meno</label>
-                    <InputText id="FirstName" class="form-control" @bind-Value="patient.Person.FirstName"/>
-                </div>
-                <div class="mb-3">
-                    <label for="LastName" class="form-label">Priezvisko</label>
-                    <InputText id="LastName" class="form-control" @bind-Value="patient.Person.LastName" />
-                </div>
-                <div class="mb-3">
-                    <label for="BirthNumber" class="form-label">Rodné číslo</label>
-                    <InputText id="BirthNumber" class="form-control" @bind-Value="patient.Person.BirthNumber" />
-                </div>
-                <div class="mb-3">
-                    <label for="Email" class="form-label">Email</label>
-                    <InputText id="Email" type="email" class="form-control" @bind-Value="patient.Person.Email" />
-                </div>
-                <div class="mb-3">
-                    <label for="Telephone" class="form-label">Tel. číslo</label>
-                    <InputText id="Telephone" class="form-control" @bind-Value="patient.Person.Telephone" />
-                </div>
-                <div class="mb-3">
-                    <label for="Allergies" class="form-label">Alergie</label>
-                    <InputText id="Allergies" class="form-control" @bind-Value="patient.Allergies"/>
-                </div>
-                <div class="mb-3">
-                    <label for="BloodGroup" class="form-label">Krvná skupina</label>
-                    <InputText id="BloodGroup" class="form-control" @bind-Value="patient.BloodGroup"/>
-                </div>
-                <div class="mb-3">
-                    <label for="Medications" class="form-label">Lieky</label>
-                    <InputText id="Medications" class="form-control" @bind-Value="patient.Medications"/>
-                </div>
-                <div class="mb-3">
-                    <label for="Vaccines" class="form-label">Očkovania</label>
-                    <InputText id="Vaccines" class="form-control" @bind-Value="patient.Vaccines"/>
-                </div>
-                <div class="mb-3">
-                    <label for="City" class="form-label">Mesto</label>
-                    @* <InputText id="City" class="form-control" @bind-Value="patient.City" /> *@
-                </div>
-                <div class="mb-3">
-                    <label for="Street" class="form-label">Ulica</label>
-                    @* <InputText id="Street" class="form-control" @bind-Value="patient.Street" /> *@
-                </div>
-                <div class="mb-3">
-                    <label for="StreetNumber" class="form-label">Číslo</label>
-                    @* <InputNumber id="StreetNumber" class="form-control" @bind-Value="patient.StreetNumber" /> *@
-                </div>
-                <div class="mb-3">
-                    <label for="PostalCode" class="form-label">PSČ</label>
-                    @* <InputNumber id="PostalCode" class="form-control" @bind-Value="patient.PostalCode" /> *@
-                </div>
-                <button type="submit" class="btn btn-primary">Uložiť zmeny</button>
-            </EditForm>
+        <EditForm Model="patientForUpdate" OnValidSubmit="HandleValidSubmit">
+            <div class="mb-3">
+                <label for="FirstName" class="form-label">Meno</label>
+                <InputText id="FirstName" class="form-control" @bind-Value="patientForUpdate.FirstName"/>
+            </div>
+            <div class="mb-3">
+                <label for="LastName" class="form-label">Priezvisko</label>
+                <InputText id="LastName" class="form-control" @bind-Value="patientForUpdate.LastName" />
+            </div>
+            <div class="mb-3">
+                <label for="Telephone" class="form-label">Tel. číslo</label>
+                <InputText id="Telephone" class="form-control" @bind-Value="patientForUpdate.Telephone" />
+            </div>
+            <div class="mb-3">
+                <label for="Allergies" class="form-label">Alergie</label>
+                <InputText id="Allergies" class="form-control" @bind-Value="patientForUpdate.Allergies"/>
+            </div>
+            <div class="mb-3">
+                <label for="BloodGroup" class="form-label">Krvná skupina</label>
+                <InputText id="BloodGroup" class="form-control" @bind-Value="patientForUpdate.BloodGroup"/>
+            </div>
+            <div class="mb-3">
+                <label for="Medications" class="form-label">Lieky</label>
+                <InputText id="Medications" class="form-control" @bind-Value="patientForUpdate.Medications"/>
+            </div>
+            <div class="mb-3">
+                <label for="Vaccines" class="form-label">Očkovania</label>
+                <InputText id="Vaccines" class="form-control" @bind-Value="patientForUpdate.Vaccines"/>
+            </div>
+            <button type="submit" class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#editPatientOffcanvas" aria-controls="editPatientOffcanvas" @onclick="HandleValidSubmit">Uložiť zmeny</button>
+        </EditForm>
     </div>
 </div>
 }
@@ -165,10 +142,11 @@
     [Parameter] public int Id { get; set; }
 
     public PatientDTO? patient;
-    
     public List<RecipeDTO> recipes = new List<RecipeDTO>();
     public List<MedicineDTO> medicines = new List<MedicineDTO>();
     public List<MedicineDTO> selectedMedicines = new List<MedicineDTO>();
+    public PatientForUpdateDTO patientForUpdate  = new PatientForUpdateDTO();
+    
 
     
     protected override async Task OnInitializedAsync()
@@ -189,7 +167,7 @@
             });
             
             // Načítanie predpisov
-            var recipeRequest = new HttpRequestMessage(HttpMethod.Get, "/api/recipe");
+            var recipeRequest = new HttpRequestMessage(HttpMethod.Get, $"api/recipe/?recipesForPatient={Id}");
             var recipeResponse = await httpClient.SendAsync(recipeRequest, HttpCompletionOption.ResponseHeadersRead);
             recipeResponse.EnsureSuccessStatusCode();
             var recipeResponseString = await recipeResponse.Content.ReadAsStringAsync();
@@ -219,6 +197,15 @@
             {
                 patient.Person = new PersonDTO();
             }
+
+            patientForUpdate.FirstName = patient.Person.FirstName;
+            patientForUpdate.LastName = patient.Person.LastName;
+            patientForUpdate.Telephone = patient.Person.Telephone;
+            patientForUpdate.Allergies = patient.Allergies;
+            patientForUpdate.BloodGroup = patient.BloodGroup;
+            patientForUpdate.Medications = patient.Medications;
+            patientForUpdate.Vaccines = patient.Vaccines;
+            
         }
         catch (HttpRequestException ex)
         {
@@ -231,37 +218,27 @@
     }
     private async Task HandleValidSubmit()
     {
+        Console.WriteLine("Submit");
         var httpClient = httpClientFactory.CreateClient("APIClient");
+        
+        patientForUpdate.BirthNumber = patient.BirthNumber;
+        patientForUpdate.Email = patient.Person.Email;
         try
         {
-            var content = new StringContent(JsonSerializer.Serialize(patient), System.Text.Encoding.UTF8, "application/json");
-            var response = await httpClient.PutAsync($"/api/register/", content);
-            response.EnsureSuccessStatusCode();
-            Console.WriteLine("Údaje boli úspešne aktualizované.");
-        }
-        catch (Exception ex)
-        {
-            Console.WriteLine($"Chyba pri aktualizácii údajov: {ex.Message}");
-        }
-    }
-
-    private void ShowRecipeDetails(RecipeDTO recipe)
-    {
-        selectedMedicines.Clear();
-        Console.WriteLine($"Loading medicines for recipe ID {recipe.Id}: {string.Join(", ", recipe.Medicines)}");  // Výpis ID liekov
-    
-        foreach (var medId in recipe.Medicines)
-        {
-            var medicine = medicines.FirstOrDefault(m => m.Id == medId);
-            if (medicine != null)
+            var response = await httpClient.PatchAsJsonAsync($"/api/patients/{Id}", patientForUpdate);
+            
+            if (response.IsSuccessStatusCode)
             {
-                Console.WriteLine($"Found medicine: {medicine.Name}");  // Výpis nájdeného lieku
-                selectedMedicines.Add(medicine);
+                Console.WriteLine("GG");
             }
             else
             {
-                Console.WriteLine($"Medicine with ID {medId} not found.");
+                Console.WriteLine("BG");
             }
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine("Error:" + ex.Message);
         }
     }
 
