--- a/HospitalManager.Client/Components/Layout/DoctorNavbar.razor
+++ b/HospitalManager.Client/Components/Layout/DoctorNavbar.razor
@@ -1,22 +1,19 @@
 ﻿<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Hospital Manager</a>
+        <a class="navbar-brand" href="/">Hospital Manager</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <NavLink class="nav-link" href="/">Domov</NavLink>
+                <li class="nav-item p-0">
+                    <NavLink style="font-size: 1rem" href="/patients">Pacienti</NavLink>
                 </li>
-                <li class="nav-item">
-                    <NavLink class="nav-link" href="/patients">Pacienti</NavLink>
+                <li class="nav-item p-0">
+                    <NavLink style="font-size: 1rem" href="/medicine">Lieky</NavLink>
                 </li>
-                <li class="nav-item">
-                    <NavLink class="nav-link" href="/medicine">Lieky</NavLink>
-                </li>
-                <li class="nav-item">
-                    <NavLink class="nav-link" href="/profile">Profil</NavLink>
+                <li class="nav-item p-0">
+                    <NavLink style="font-size: 1rem" href="/profile">Profil</NavLink>
                 </li>
             </ul>
         </div>
