--- a/HospitalManager.Client/Components/Layout/DoctorNavbar.razor.css
+++ b/HospitalManager.Client/Components/Layout/DoctorNavbar.razor.css
@@ -21,7 +21,7 @@
 }
 
 .navbar-brand {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
 }
 
 .bi {
@@ -73,12 +73,16 @@
 
 .nav-item ::deep a.active {
     background-color: rgba(255,255,255,0.37);
-    color: white;
+    color: deepskyblue !important;
 }
 
 .nav-item ::deep .nav-link:hover {
     background-color: rgba(255,255,255,0.1);
     color: white;
+}
+
+.nav-btn {
+    font-size: 1.5rem !important;
 }
 
 .nav-scrollable {
